--- a/Source/PollingTcp/PollingTcp.nuspec
+++ b/Source/PollingTcp/PollingTcp.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>$NUGET_PACKAGEVERSION$</version>
+    <version>$APPVEYOR_BUILD_VERSION$-Pre+$APPVEYOR_REPO_COMMIT$</version>
     <title>$title$</title>
     <authors>Michael Schnyder</authors>
     <owners>Michael Schnyder</owners>
