--- a/Source/PollingTcp.Tests/PollingTcp.Tests.csproj
+++ b/Source/PollingTcp.Tests/PollingTcp.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="FrameBufferTests.cs" />
+    <Compile Include="PollingTcpClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
